# diplima_test

./: .gitignore  CMakeLists.txt  MASTER_PLAN.md  PROJECT_TRACKER.md  README.md  UI_IMPROVEMENT_PLAN.md  analysis_VKR.md  config.json  fixes_report.md  implementation_plan.md  interfaces.txt  lint.py  out.txt  production_roadmap.md  task_GUI  А-08-22 Дерюга А.А. задание.md
.antigravitycli/: 868be918-d469-42fb-b950-bdede05d9226.json
PLANS/: 10.md  11.md  12.md  2.md  22.md  24.md  26.md  5.md  6.md  8.md  analysis_results25.md  implementation_plan17.md  implementation_plan25.md  production_roadmap.md  task12.md  task13.md  task14.md  task15.md  task18.md  task2.md  task22.md  task24.md  task6.md  task7.md  task8.md  walkthrough1.md  walkthrough19.md  walkthrough23.md  walkthrough24.md  walkthrough8.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  CLASS_REFERENCE.md  Codebase.md  DATABASE_SCHEMA.md  DEVELOPER_GUIDE.md  DOCUMENTATION.md  DOCUMENTATION_INDEX.md  FeatureExtractionAlgorithm.md  PERFORMANCE_REPORT.md  QUICK_START.md  README.md  RECOMMENDATIONS.md  Refactoring DDoS Detector Project.md  TESTING.md  TROUBLESHOOTING.md  USER_GUIDE.md  VKR_COMPLIANCE.md  diagrams.md  task.md  windows-setup.md  ОТЧЕТ_ПО_ПРЕДДИПЛОМНОЙ_ПРАКТИКЕ.md
docs/PLANS/: 14.md  20.md  21.md  23.md  3.md  4.md  7.md  RESOURCES.md  analysis_results23.md  implementation_plan.md  implementation_plan1.md  monium_integration12.md  rebuild_plan16.md  task.md  task1.md  task10.md  task11.md  task16.md  task17.md  task20.md  task23.md  task26.md  task3.md  task4.md  task5.md  task9.md  walkthrough.md  walkthrough10.md  walkthrough15.md  walkthrough18.md  walkthrough25.md  walkthrough26.md
docs/academic/: 1 Титул отчета по преддипл пр.md  1.md  2.md  3 (1).md  3 Рекомендации по составлению отчета по практике.md  4 (1).md  5 (1).md  GRAPHICS.md  Software Requirements Specification 1.md  VKR_PLAN.md  _citations_check.txt  ВКР Черновик 2.md  ВКР_Черновик.md  ВКР_Черновик_2.docx  ВКР_черновик_claude.md  ВКР_черновик_gemini.md  ОТЧЕТ_ПО_ПРЕДДИПЛОМНОЙ_ПРАКТИКЕ.md  Отчет_по_практике_Final.md  Преддипломная практика 2026 (1).md  Требования_к_оформлению_ВМСС_gost_rqr.md
docs/academic/Требования кафедры/: !аннотация.doc  !аннотация.docx  !аннотация.md  _gost_rqr.doc  _gost_rqr.docx  _gost_rqr.md  _list_of_literature.md  checklist.doc  checklist.docx  checklist.md  выводы.doc  выводы.docx  выводы.md  выход на защиту 2026.doc  выход на защиту 2026.docx  выход на защиту 2026.md
docs/archive/plans/: implementation_plan.md
docs/archive/specs/: MLP Model DDoS Detection Issue.md  UI_Reconstruction_Spec.md
docs/Материалы для диплома/: 1 Титул отчета по преддипл пр.docx  1.md  2 Содержание и оформление отчета с разработкой ПП.md  2.docx  3.docx  4 Требования с сайта ВМСС.md  4.docx  5 Рекомендации по составлению библиографии.md  desktop.ini  В 2026 году действует ГОСТ Р 7.docx  Преддипломная практика 2026.ppt
models/: Untitled0.ipynb  mlp_model.onnx  mlp_scaler_params.json  rf_model.onnx  scaler_params.json  xgb_model.onnx  xgb_scaler_params.json
scripts/: add_appendix_refs.py  add_uml_diagrams.py  check_captions.py  check_db.py  check_figs.py  check_sessions.py  clean_comments.py  clean_comments_final.py  clean_comments_final2.py  cleanup_artifacts.py  cleanup_gost.py  ddos_test.py  ensure_app_breaks.py  eskd_cleanup.py  final_fix_gost.py  final_polish.py  final_polish_bib.py  final_repair.py  final_russify_listings.py  fix_all_refs.py  fix_appendices.py  fix_class_tables.py  fix_figures.py  fix_mermaid_err.py  fix_mermaid_rhombus.py  fix_tables.py  fix_vkr_gost.py  format_all_listings.py  format_listings_v2.py  format_listings_v3.py  format_listings_v4.py  format_listings_v5.py  format_listings_v6.py  generate_appendix_d.py  generate_appendix_e.py  generate_appendix_g.py  generate_listings.py  inject_gost_listings.py  kaggle_pipeline.py  polish_formulas.py  (+11 more)
src/: FeatureExtractor.cpp  FeatureExtractor.h  TrafficMonitor.cpp  TrafficMonitor.h  blockingconcurrentqueue.h  collector_main.cpp  lightweightsemaphore.h  main.cpp  monitor_main.cpp
src/benchmarks/: db_benchmark.cpp
src/common/: AppLogger.cpp  AppLogger.hpp  CSVUtils.hpp  ConfigManager.cpp  ConfigManager.hpp  DataBridge.cpp  DataBridge.hpp  DatabaseManager.cpp  DatabaseManager.hpp  FileBuffer.cpp  FileBuffer.hpp  NetStructs.hpp  PacketBuffer.hpp  Protocol.cpp  Protocol.hpp  SystemMetricsCollector.cpp  SystemMetricsCollector.hpp  TcpClient.cpp  TcpClient.hpp  TcpServer.cpp  TcpServer.hpp
src/core/: DetectionEngine.cpp  DetectionEngine.hpp  FirewallManager.cpp  FirewallManager.hpp
src/ml/: ModelInferencer.cpp  ModelInferencer.hpp
src/monitor_ui/: DashboardWidget.cpp  DashboardWidget.hpp  DashboardWidget_setupDashboard.cpp_part  EventHistoryWidget.cpp  EventHistoryWidget.hpp  LogWidget.cpp  LogWidget.hpp  ReportGenerator.cpp  ReportGenerator.hpp  SessionWidget.cpp  SessionWidget.hpp  ThemePalette.cpp  ThemePalette.hpp
src/network/: FeatureExtractor.cpp  FeatureExtractor.hpp  PcapDumper.cpp  PcapDumper.hpp  TrafficMonitor.cpp  TrafficMonitor.hpp
src/tests/: CMakeLists.txt  DatabaseBenchmark.cpp
tests/: CMakeLists.txt  run_benchmark.cpp  test_config.cpp  test_protocol.cpp
tests/unit/: AppLoggerTests.cpp  AppLoggerTests.hpp  CSVUtilsTests.cpp  CSVUtilsTests.hpp  ProtocolTests.cpp  ProtocolTests.hpp  TestConfigManager.cpp  TestConfigManager.hpp  benchmark_DatabaseManager.cpp  main.cpp  test_ConfigManager.cpp  test_ConfigManager.hpp  test_FileBuffer.cpp  test_FileBuffer.hpp  test_ModelInferencer.cpp  test_ModelInferencer.hpp  test_Protocol.cpp  test_Protocol.hpp  test_SystemMetricsCollector.cpp  test_SystemMetricsCollector.hpp  test_config.cpp  test_main.cpp  test_protocol.cpp
